test/sema/typeck/fn/variadic-not-last.out
error: variadic parameter needs to be last.
--> variadic-not-last.dora:1:6
 | fn f(_x: Int32..., _y: Int32) {}
        ~~~~~~~~~~~~
 | 
1 error found.
